# modern-vibecoding-devcontainer

./: CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-test.yml  update-dependencies.yml
base/: Dockerfile  README.md  build.sh  compose.yml
docs/: BASE_CONTAINER_USAGE.md  CLI_INSTALLATION.md  DOCKER_ISSUES.md  EASY_USAGE.md  PROJECT_INTEGRATION_GUIDE.md  USAGE.md
scripts/: create-project.sh  dev.sh  install-dev-cli.sh  install.sh  setup-cli.sh  update-base.sh
templates/minimal/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml  run-with-cli.sh  setup-cli.sh
templates/minimal/.claude/: CLAUDE.md  setting.json
templates/minimal/.claude/command/: python.md
templates/minimal/.devcontainer/: devcontainer.json
templates/minimal/.github/workflows/: ci.yml
templates/minimal/src/your_package/: __init__.py
templates/minimal/tests/: test_basic.py
templates/webapp/: Dockerfile
